<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Login" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <TextView
                style="@style/TextViewSignInSignUp"
                android:layout_marginTop="50dp"
                android:text="@string/heading_sing_in"

                />


            <View style="@style/signInSignUpView" />


            <EditText
                android:id="@+id/et_applicant_mobile_no"
                style="@style/CustomEditText"
                android:hint="@string/hint_mobile_no"
                android:inputType="number"
                android:maxLength="10" />

            <EditText
                android:id="@+id/et_applicant_password"
                style="@style/CustomEditText"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="10" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <RelativeLayout
                    android:id="@+id/layout_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true">

                    <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/checkbox"
                        android:text="@string/keep_me_sign_in"
                        android:textSize="16dp" />

                </RelativeLayout>


                <TextView
                    android:id="@+id/tv_forget_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorAccent"
                    android:textSize="16dp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_login"
                style="@style/ButtonCustom"
                android:text="@string/btn_login" />


            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAlignment="center" />

        </LinearLayout>


    </ScrollView>


</RelativeLayout>