<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Change Password" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <!--    <TextView
                    style="@style/TextViewSignInSignUp"
                    android:layout_marginTop="50dp"
                    android:text="@string/heading_sing_in"

                    />


                <View
                    style="@style/signInSignUpView" />
    -->


            <EditText
                android:id="@+id/et_password"
                style="@style/CustomEditText"
                android:layout_marginTop="100dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="10" />

            <EditText
                android:id="@+id/et_conf_password"
                style="@style/CustomEditText"
                android:hint="@string/reg_password_again"
                android:inputType="textPassword"
                android:maxLength="10" />


            <Button
                android:id="@+id/btn_login"
                style="@style/ButtonCustom"
                android:text="@string/btn_change_pass" />


        </LinearLayout>


    </ScrollView>


</RelativeLayout>