<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_bg_gradient"
    tools:context=".OTPActivity">


    <TextView
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="4"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/header_verification_code"
        style="@style/TextViewMsgOTP"
        android:layout_below="@id/pass"
        android:layout_marginBottom="@dimen/verification_code_header_margin_Bottom"
        android:text="@string/heading_verification_code"
        android:textSize="@dimen/verification_code_header_size" />

    <TextView
        android:id="@+id/msg_verification_code"
        style="@style/TextViewMsgOTP"
        android:layout_below="@+id/header_verification_code"
        android:layout_marginBottom="@dimen/msg_verification_code_margin_bottom"
        android:layout_marginLeft="@dimen/msg_verification_code_margin_right"
        android:layout_marginRight="@dimen/msg_verification_code_margin_right"
        android:text="@string/msg_enter_verification_code"
        android:textSize="@dimen/msg_verification_code_text_size" />


    <LinearLayout
        android:id="@+id/layout_otp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/msg_verification_code"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/editTextone"
            style="@style/TextViewOTP"
            android:elevation="@dimen/otp_view_elevation"></TextView>

        <TextView
            android:id="@+id/editTexttwo"
            style="@style/TextViewOTP"
            android:elevation="5dp" />

        <TextView
            android:id="@+id/editTextthree"
            style="@style/TextViewOTP"
            android:elevation="@dimen/otp_view_elevation" />

        <TextView
            android:id="@+id/editTextfour"
            style="@style/TextViewOTP"
            android:elevation="@dimen/otp_view_elevation" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_count_down"
        style="@style/TextViewMsgOTP"
        android:layout_below="@+id/layout_otp"
        android:layout_marginBottom="@dimen/tv_count_down_size_margin_bottom"
        android:layout_marginLeft="@dimen/tv_count_down_size_margin_left"
        android:layout_marginRight="@dimen/tv_count_down_size_margin_right"
        android:layout_marginTop="@dimen/tv_count_down_size_margin_top"
        android:text="@string/msg_code_expire"
        android:textSize="@dimen/tv_count_down_size" />

    <ImageView
        android:id="@+id/iv_next"
        style="@style/ImageViewButtonNext"
        android:layout_width="@dimen/buttonNextOTPWidth"
        android:layout_height="@dimen/buttonNextOTPHeight"
        android:layout_below="@+id/tv_count_down"
        android:layout_centerHorizontal="true"
        android:elevation="10dp" />


    <TextView
        android:layout_below="@id/iv_next"
        android:id="@+id/tv_resend_otp"
        style="@style/TextViewMsgOTP"
        android:text="@string/resend_otp"
        android:visibility="invisible"
        android:layout_marginTop="10dp" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/custom_key_recycler_view_margin_bottom"
        android:layout_marginLeft="@dimen/custom_key_recycler_view_margin_left"
        android:layout_marginRight="@dimen/custom_key_recycler_view_margin_right"
        android:clipToPadding="false"
        android:scrollbars="vertical" />


</RelativeLayout>