<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    android:baselineAligned="false"
    tools:context=".MobileNoRegistrationActivity">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/custom_bg_gradient"
            android:layout_weight="1">

        <ImageView
            style="@style/ImageViewPrevious"
            />

        <ImageView
            android:layout_width="@dimen/iconMobileAuthWidth"
            android:layout_height="@dimen/iconMobileAuthHeight"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_msg" />
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/layoutMobileAuthMarginLeft"
            android:layout_marginRight="@dimen/layoutMobileAuthMarginRight"
            android:orientation="vertical">

            <TextView
                android:id="@+id/et_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_country"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/viewHeight"
                android:background="@color/colorViewDarkGray" />


            <EditText
                android:id="@+id/et_phone_number"
                style="@style/PhoneNoEditText"
                android:inputType="number"
                android:hint="@string/hint_phone_no" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/viewHeight"
                android:background="@color/colorViewDarkGray" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textViewMobileAuthMarginTop"
                android:gravity="center"
                android:text="@string/msg_phone_no_authenticate" />


            <ImageView
                android:id="@+id/iv_next"
                style="@style/ImageViewButtonNext"
                android:layout_gravity="center"
                android:layout_width="@dimen/buttonNextMobileWidth"
                android:layout_height="@dimen/buttonNextMobileHeight"
                android:layout_marginBottom="@dimen/buttonNextMarginBottom"
                android:layout_marginTop="@dimen/buttonNextMarginTop" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>